<resources>
    //App main strings
    <string name="app_name">Omega Camera</string>
    <string name="output_photo_directory">OmegaCamera</string>
    <string name="output_photo_name_template">OMG_%1$s</string>
    <string name="output_photo_date_template">yyyyMMdd_HHmmss</string>
    <string name="output_photo_ext">.jpg</string>

    <string name="permissions_error_title">Разрешение не получено</string>
    <string name="permissions_error_value">Пожалуйста, предоставьте приложению доступ к камере в настройках.</string>
    <string name="permissions_error_screen_text">Отсутствует разрешение на камеру</string>

    <string name="camera_button_switch">Переключить камеру</string>
    <string name="camera_button_photo">Сделать фото</string>
    <string name="camera_button_gallery">Галерея</string>

    <string name="gallery_button_back">Назад</string>
    <string name="gallery_button_share">Поделиться</string>
    <string name="gallery_button_delete">Удалить</string>
    <string name="share_hint">Поделиться с помощью</string>

    <string name="delete_dialog_button_alt">Delete</string>
    <string name="delete_dialog_question">Delete current photo?</string>
    <string name="delete_dialog_title">Confirm</string>
</resources>
