<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cameraUiContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cameraFocus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera_focus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/cameraUiTransparentBackground">

        <ImageButton
            android:id="@+id/cameraButtonSwitch"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginBottom="56dp"
            android:layout_marginStart="32dp"
            android:padding="4dp"
            android:src="@drawable/ic_switch_camera"
            android:background="@color/colorTransparent"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/camera_button_switch"/>

        <ImageButton
            android:id="@+id/cameraButtonPhoto"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginBottom="64dp"
            android:padding="4dp"
            android:src="@drawable/ic_shutter"
            android:background="@color/colorTransparent"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/camera_button_photo"/>

        <ImageButton
            android:id="@+id/cameraButtonGallery"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginBottom="56dp"
            android:layout_marginEnd="32dp"
            android:padding="4dp"
            android:src="@drawable/ic_outer_circle"
            android:background="@color/colorTransparent"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/camera_button_gallery"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>