<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/photoViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cutoutSafeArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/cameraUiTransparentBackground"
            android:orientation="horizontal">
        <ImageButton
            android:id="@+id/backButton"
            android:contentDescription="@string/gallery_button_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/margin_xsmall"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:layout_width="@dimen/round_button_small"
            android:layout_height="@dimen/round_button_small"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/cameraUiTransparentBackground"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/shareButton"
                android:contentDescription="@string/gallery_button_share"
                android:layout_width="@dimen/round_button_small"
                android:layout_height="@dimen/round_button_small"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_share"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>
            <ImageButton
                android:id="@+id/deleteButton"
                android:contentDescription="@string/gallery_button_delete"
                android:layout_width="@dimen/round_button_small"
                android:layout_height="@dimen/round_button_small"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_delete"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>